payment by paypal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.jpa.hibernate.ddl-auto = none
 spring.main.allow-circular-references=true
 spring.security.oauth2.client.registration.google.client-id=145460705371-v6fdf0rrg9h0d7p75hkq73cgigcb9pvi.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
+
+#paypal
+paypal.baseUrl=https://api-m.sandbox.paypal.com
+paypal.clientId=AZc4S0Eg9ET6iTnx5bbd57SxravOULNOlUO2q4s66_GnFfozOlHcwx1hSIT8RTC4-ouqdAT8xiobTtij
+paypal.secret=EHcaE3KZjyMudfDvwPcTyVnI3NRjXKOVmHt4D8xt0G0Se6q_Vfcb2sEDkRozkvADdN0CPzYo6G6PV2uw
