forgotpass va mã hoá pass sussces

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-cxyUOSp09
 paypal.baseUrl=https://api-m.sandbox.paypal.com
 paypal.clientId=AZc4S0Eg9ET6iTnx5bbd57SxravOULNOlUO2q4s66_GnFfozOlHcwx1hSIT8RTC4-ouqdAT8xiobTtij
 paypal.secret=EHcaE3KZjyMudfDvwPcTyVnI3NRjXKOVmHt4D8xt0G0Se6q_Vfcb2sEDkRozkvADdN0CPzYo6G6PV2uw 
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tastybites20023@gmail.com
+spring.mail.password=brgxxiywnzttocks
+spring.mail.properties.mail.smpt.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
