--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2019Dialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = none
 spring.main.allow-circular-references=true
 spring.security.oauth2.client.registration.google.client-id=145460705371-v6fdf0rrg9h0d7p75hkq73cgigcb9pvi.apps.googleusercontent.com
